added course-navigator component

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -6,3 +6,6 @@ Password
 <input [(ngModel)]="password">
 <br/>
 <button (click)="login(username,password)">Login</button>
+<a routerLink="/register">
+    Sign up!!!
+</a>
