--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,5 @@
 <a routerLink="/login">Login</a>
 <a routerLink="/register">Register</a>
 <a routerLink="/profile">Profile</a>
+<a routerLink="/course">Courses</a>
 <router-outlet></router-outlet>
