--- a/src/app/course-navigator/course-navigator.component.html
+++ b/src/app/course-navigator/course-navigator.component.html
@@ -1,5 +1,6 @@
+<p>test</p>
 <ul class="list-group">
-    <li *ngFor="let course of courses" class="list-group-item">
-        {{course}}
+    <li *ngFor="let courses of courses" class="list-group-item">
+        {{courses}}
     </li>
 </ul>
