--- a/src/app/course-navigator/course-navigator.component.html
+++ b/src/app/course-navigator/course-navigator.component.html
@@ -2,10 +2,10 @@
     <li class="list-group-item active">
         Courses
     </li>
-    <li *ngFor="let courses of courses" class="list-group-item" 
-    (click)="selectCourse(course)" [ngClass]="{'active': courses.id == selectedCourse.id}"
+    <li *ngFor="let course of courses" class="list-group-item" 
+    (click)="selectCourse(course)" [ngClass]="{'active':course.id==selectedCourse.id}"
     >
-        {{courses.title}}
+        {{course.title}}
     </li>
 </ul>
 {{selectedCourse.modules.length}}
